# DevBook

./: .gitignore  CMakeLists.txt  Makefile  README.md  astro.config.mjs  c.md  git.md  hello  hello_world  hello_world.c  markdown.md  read_number  read_number.c  tangle  tangle.c
docs/examples_src/: c.md
docs/tutorials/: github_web_pages.md
src/: main.c  tangle.h  tangle_md4c.c  tangle_simple.c
src/content/design_patterns/creational/: abstract_factory.md  builder.md  creational.md  factory_methot.md  prototype.md  singleton.md
src/content/design_patterns/structural/: adapter.md
